@@ -25,7 +25,7 @@
 /*
  * @test
  * @summary Test AOT cache support for array classes in custom class loaders.
- * @bug 8353298
+ * @bug 8353298 8356838
  * @requires vm.cds.supports.aot.class.linking
  * @comment work around JDK-8345635
  * @requires !vm.jvmci.enabled
@@ -37,20 +37,36 @@
  * @run driver AOTCacheSupportForCustomLoaders AOT
  */
 
+import java.lang.module.Configuration;
+import java.lang.module.ModuleFinder;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.io.File;
+import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Set;
+import jdk.test.lib.cds.CDSJarUtils;
+import jdk.test.lib.cds.CDSModulePackager;
 import jdk.test.lib.cds.SimpleCDSAppTester;
 import jdk.test.lib.process.OutputAnalyzer;
 
 public class AOTCacheSupportForCustomLoaders {
+    static final Path SRC = Paths.get(System.getProperty("test.src")).resolve("modules");
+
     public static void main(String... args) throws Exception {
+        CDSModulePackager modulePackager = new CDSModulePackager(SRC);
+        String modulePath = modulePackager.getOutputDir().toString();
+        modulePackager.createModularJar("com.test");
+
         SimpleCDSAppTester.of("AOTCacheSupportForCustomLoaders")
             .classpath("app.jar")
-            .addVmArgs("-Xlog:aot+class=debug", "-Xlog:aot", "-Xlog:cds")
-            .appCommandLine("AppWithCustomLoaders")
+            .addVmArgs("-Xlog:aot+class=debug", "-Xlog:aot", "-Xlog:cds",
+                       "--module-path=" + modulePath,
+                       "--add-modules=com.test")
+            .appCommandLine("AppWithCustomLoaders", modulePath)
             .setAssemblyChecker((OutputAnalyzer out) -> {
                     out.shouldMatch(",class.*unreg AppWithCustomLoaders[$]MyLoadeeA")
+                       .shouldMatch(",class.*unreg com.test.Foo")
                        .shouldMatch(",class.*array \\[LAppWithCustomLoaders[$]MyLoadeeA;")
                        .shouldNotMatch(",class.* ReturnIntegerAsString");
                 })
@@ -67,11 +83,21 @@ class AppWithCustomLoaders {
         URL[] urls = new URL[] {custJar.toURI().toURL()};
         MyLoader loader = new MyLoader(urls, AppWithCustomLoaders.class.getClassLoader());
 
-        // Test 1: array class of MyLoadeeA (JDK-8353298)
+        test1(loader);
+        test2(loader);
+        test3(args[0]);
+
+        // TODO: more test cases JDK-8354557
+    }
+
+    // Test 1: array class of MyLoadeeA (JDK-8353298)
+    static void test1(MyLoader loader) throws Exception {
         Class klass = loader.loadClass("AppWithCustomLoaders$MyLoadeeA");
         klass.newInstance();
+    }
 
-        // Test 2: VerificationType::is_reference_assignable_from() cannot be skipped (JDK-8356407)
+    // Test 2: VerificationType::is_reference_assignable_from() cannot be skipped (JDK-8356407)
+    static void test2(MyLoader loader) throws Exception {
         try {
             Class bad = loader.loadClass("ReturnIntegerAsString");
             Object o = bad.newInstance(); // force verification
@@ -80,8 +106,41 @@ class AppWithCustomLoaders {
         } catch (VerifyError ve) {
             System.out.println("Expected: " + ve);
         }
+    }
 
-        // TODO: more test cases JDK-8354557
+    // Test 3: custom loader defines a class from the exact location as a class defined in the boot layer.
+    static void test3(String modulePath) throws Exception {
+        Class<?> c0 = Class.forName("com.test.Foo");
+        System.out.println(c0);
+        System.out.println(System.identityHashCode(c0.getModule()));
+        System.out.println(c0.getModule().getName());
+        System.out.println(c0.getClassLoader());
+
+        // Regression test for JDK-8356838
+        //
+        // We create a new layer that loads the com.test module from the modulePath into
+        // a different class loader.
+        ModuleFinder finder = ModuleFinder.of(Paths.get(modulePath));
+        ModuleLayer parent = ModuleLayer.boot();
+        Configuration cf = parent.configuration().resolve(finder, ModuleFinder.of(), Set.of("com.test"));
+        ClassLoader scl = ClassLoader.getSystemClassLoader();
+        ModuleLayer layer = parent.defineModulesWithOneLoader(cf, scl);
+        Class<?> c1 = layer.findLoader("com.test").loadClass("com.test.Foo");
+
+        System.out.println(c1);
+        System.out.println(System.identityHashCode(c1.getModule()));
+        System.out.println(c1.getModule().getName());
+        System.out.println(c1.getClassLoader());
+
+        if (!c1.getModule().getName().equals("com.test")) {
+            throw new RuntimeException("Unexpected module: " + c1.getModule());
+        }
+        if (c1.getModule() == c0.getModule()) {
+            throw new RuntimeException("Unexpected module: " + c1.getModule());
+        }
+        if (c1.getClassLoader() == c0.getClassLoader()) {
+            throw new RuntimeException("Unexpected class loader: " + c1.getClassLoader());
+        }
     }
 
     public static class MyLoader extends URLClassLoader {
